# OmniTurtle

./: README.md
omni_turtlebot3_description/: CMakeLists.txt  package.xml
omniturtle_control/: CMakeLists.txt  package.xml
omniturtle_control/config/: omniturtle_control.yaml
omniturtle_control/include/: controller.h  keyboard_controller.h  manager.h  mecanum_solver.h  solver.h
omniturtle_control/launch/: omniturtle_control.launch
omniturtle_control/src/: keyboard_controller.cpp  manager.cpp  mecanum_solver.cpp
omniturtle_description/: CMakeLists.txt  package.xml
omniturtle_description/meshes/wheels/: roller_7_step.stl
omniturtle_description/rviz/: model.rviz
omniturtle_description/urdf/: mecanum_description.gazebo.xacro  mecanum_description.urdf.xacro  omniturtle.gazebo.xacro  omniturtle.urdf (copy).xacro  omniturtle.urdf.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
omniturtle_gazebo/: CMakeLists.txt  package.xml
omniturtle_gazebo/launch/: turtlebot3_empty_world.launch  turtlebot3_gazebo_rviz.launch  turtlebot3_world.launch
turtlebot3_gazebo/launch/: turtlebot3_empty_world.launch  turtlebot3_gazebo_rviz.launch  turtlebot3_world.launch
