<?xml version="1.0"?>
<package format="2">
  <name>omniturtle_description</name>
  <version>1.2.3</version>
  <description>
    3D models of the TurtleBot3 with mecanum wheels for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="maintainer@todo.todo">robohobomobo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
